no need to make schema, already obtainable from getProjectSchema
